dev/victoria-metrics/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: victoria-metrics
  annotations:
    external-dns.alpha.kubernetes.io/target: 133.18.105.254
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.mtaku3.com`)
      kind: Rule
      services:
        - name: vm-grafana
          port: service
  tls:
    secretName: grafana-tls-cert
